# ocr-preprocessor-tesseract

./: --psm.tsv  .gitignore  CMakeLists.txt  README.md  integration.md  run_log.txt  setup_and_build.bat  visualize_heatmap.py
KTU_B_Tech_Project_Report_template_CS_GECT/: ABBREVIATIONS.tex  abstract.tex  acknowledgement.tex  certificate1.tex  coverpage.tex  declaration.tex  project_report.tex
docs/: IEEE_Paper_Draft.md  IEEE_Paper_Draft.tex  README.md
evaluation/: analyze_result.py  evaluate_ocr.py  requirements.txt
evaluation/dataset/english/eng_baseline/: eng_base_1.txt  eng_base_2.txt
evaluation/dataset/english/eng_camera/: eng_cam_1.txt
evaluation/dataset/english/eng_camera_skew/: eng_cam_skew_1.txt  eng_cam_skew_2.txt
evaluation/dataset/english/eng_camera_warp/: eng_cam_warp_1.txt
evaluation/dataset/english/eng_complex_bg_baseline/: eng_comp_base_1.txt  eng_comp_base_2.txt
evaluation/dataset/english/eng_complex_bg_camera/: eng_comp_bg_cam_01.txt  eng_comp_bg_cam_02.txt  eng_comp_bg_cam_03.txt
evaluation/dataset/malayalam/mal_camera/: mal_camera_1.txt
evaluation/dataset/malayalam/mal_camera_skew/: mal_camera_skew_1.txt  mal_camera_skew_2.txt
evaluation/dataset/malayalam/mal_camera_warp/: mal_camera_warp_1.txt  mal_camera_warp_2.txt
evaluation/dataset/malayalam/mal_complex_bg_baseline/: mal_comp_base_1.txt  mal_comp_base_2.txt  mal_comp_base_3.txt
evaluation/dataset/malayalam/mal_complex_bg_camera/: mal_comp_bg_camera02.txt  mal_comples_bg_camera01.txt  mal_comples_bg_camera02.txt  mal_comples_bg_camera03.txt  mal_comples_bg_camera03.txt.save
final_report/: ABBREVIATIONS.aux  ABBREVIATIONS.tex  abstract.tex  acknowledgement.tex  certificate1.tex  coverpage.tex  declaration.tex  project_report.aux  project_report.out  project_report.tex  project_report.toc  read me  symbol.aux
final_report/chapters/: conclusion.aux  conclusion.tex  introduction.aux  introduction.tex  literature_review.aux  literature_review.tex  methodology.aux  methodology.tex  preliminary_analysis.aux  preliminary_analysis.tex  proposed_system.aux  proposed_system.tex  results_discussion.aux  results_discussion.tex
final_report/frontmatter/: ABBREVIATIONS.aux  ABBREVIATIONS.tex  abstract.aux  acknowledgement.aux  acknowledgement.tex  certificate1.aux  certificate1.tex  coverpage.aux  coverpage.tex  declaration.aux  declaration.tex  references.aux  references.tex  symbol.aux
include/: CoreTypes.h  GeometryUtils.h  ImageWarp.h  LayoutDetector.h  PostProcess.h  TextDetector.h  optional
src/: GeometryUtils.cpp  ImageWarp.cpp  LayoutDetector.cpp  PostProcess.cpp  TextDetector.cpp  main.cpp
